# Health-reminder

./: .gitignore  CONTRIBUTING.md  README.en.md  README.md  package-lock.json  package.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
bucket/: health-reminder.json
docs/: VERSION_GUIDE.md
src/: main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/i18n/: en-US.js  zh-CN.js
